force-app/main/default/objects/Commission_Payee__c/Commission_Payee__c.object-meta.xml
<CustomObject>
    <description>this is the object that hold the basic Payee information it is not connected the users</description>
    <label>iMC Commission Payee</label>
    <nameField>
        <label>iMC Payee Full Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>iMC Commission Payee</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>