force-app/main/default/objects/Commission_Payee__c/fields/Commission_Accelerator__c.field-meta.xml
<CustomField>
    <fullName>Commission_Accelerator__c</fullName>
    <defaultValue>1.0</defaultValue>
    <label>Commission Accelerator</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>