force-app/main/default/objects/Commission_Payee__c/fields/iMC_Commission_Payee_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>iMC_Commission_Payee_Record_ID__c</fullName>
    <label>iMC Commission Payee Record ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>