force-app/main/default/objects/Commission_Payee__c/fields/of_Commission_Payee__c.field-meta.xml
<CustomField>
    <fullName>of_Commission_Payee__c</fullName>
    <description>Power of One</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Commission Payee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>