force-app/main/default/objects/Commission_Payee__c/fields/Pending_Commission_Credits_Totals__c.field-meta.xml
<CustomField>
    <fullName>Pending_Commission_Credits_Totals__c</fullName>
    <label>Pending Commission Credits Totals</label>
    <summarizedField>Commission_Credit__c.Credit_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Commission_Credit__c.Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </summaryFilterItems>
    <summaryForeignKey>Commission_Credit__c.Commission_Payee__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>