force-app/main/default/objects/Commission_Payee__c/fields/Pending_Commission_Totals__c.field-meta.xml
<CustomField>
    <fullName>Pending_Commission_Totals__c</fullName>
    <label>Pending Commission Totals</label>
    <summarizedField>Commission__c.Commission_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Commission__c.Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </summaryFilterItems>
    <summaryForeignKey>Commission__c.Commission_Payee__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>