force-app/main/default/objects/Commission_Payee__c/fields/PGi_Sales_User__c.field-meta.xml
<CustomField>
    <fullName>PGi_Sales_User__c</fullName>
    <label>PGi Sales User</label>
    <length>50</length>
    <type>Text</type>
</CustomField>