force-app/main/default/objects/Commission_Payee__c/fields/Special_Bonus_Multipliers__c.field-meta.xml
<CustomField>
    <fullName>Special_Bonus_Multipliers__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Special Bonus Multipliers</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>