force-app/main/default/objects/Commission_Payee__c/fields/Total_Commissions__c.field-meta.xml
<CustomField>
    <fullName>Total_Commissions__c</fullName>
    <description>This is a grand total commissions</description>
    <formula>Approved_Commission_Totals__c  + 
 Pending_Commission_Totals__c  + 
 Paid_Commission_Totals__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Commissions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>