force-app/main/default/objects/Commission_Payee__c/listViews/AllCommissionPayees.listView-meta.xml
<ListView>
    <fullName>AllCommissionPayees</fullName>
    <columns>NAME</columns>
    <columns>Inactive__c</columns>
    <columns>Team__c</columns>
    <columns>Pending_Commission_Totals__c</columns>
    <columns>Approved_Commission_Totals__c</columns>
    <columns>Paid_Commission_Totals__c</columns>
    <columns>Total_Commissions__c</columns>
    <columns>Pending_Commission_Credits_Totals__c</columns>
    <columns>Approved_Commission_Credits_Totals__c</columns>
    <columns>Paid_Commission_Credit_Totals__c</columns>
    <columns>Total_Commission_Credits__c</columns>
    <columns>Commission_Base__c</columns>
    <columns>Commission_Accelerator__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Commission Payees</label>
</ListView>