force-app/main/default/objects/Commission_Payee__c/listViews/AllCommissionPayeeswithRate.listView-meta.xml
<ListView>
    <fullName>AllCommissionPayeeswithRate</fullName>
    <columns>NAME</columns>
    <columns>Inactive__c</columns>
    <columns>Team__c</columns>
    <columns>Commission_Base__c</columns>
    <columns>Commission_Accelerator__c</columns>
    <columns>Special_Bonus_Amounts__c</columns>
    <columns>Special_Bonus_Multipliers__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Commission Payees with Rate</label>
</ListView>