force-app/main/default/objects/Commission_Payee__c/listViews/Allwithopencommissions.listView-meta.xml
<ListView>
    <fullName>Allwithopencommissions</fullName>
    <booleanFilter>1 or 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Inactive__c</columns>
    <columns>Team__c</columns>
    <columns>Pending_Commission_Totals__c</columns>
    <columns>Approved_Commission_Totals__c</columns>
    <columns>Pending_Commission_Credits_Totals__c</columns>
    <columns>Approved_Commission_Credits_Totals__c</columns>
    <columns>Commission_Base__c</columns>
    <columns>Commission_Accelerator__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Total_Commission_Credits__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Total_Commissions__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <label>All with open commission amounts</label>
</ListView>